2006-03-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Source code is now shown in dasm.php
        * Added source-code lines to the returned opcode array in ea_dasm.c

2006-03-21  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed bug #24

2006-03-17  Hans Rakers <hans at parse dot nl>

        * Fix for sf.net bug #1442839 (handling of ZEND_ASSIGN_OBJ by the
          optimizer)
        * Changed BRK handling to not bail out of the optimizer prematurely
          on a multi-level break. This does need some more testing, but
          should fix sf.net bug #1442923
        * Removed some dead code in ea_store.c and excluded some debug code
          from compilation in optimize.c

2006-03-09  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Included fcntl.h in ea_info.c, this should fix bug #13

2006-03-07  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Set refcount to 1 before storing a zval in the usercache. This fixes
          bug #4.
        * Some formatting cleanups in cache.c
        * In restore_zval the zval length could be something else then 0 when 
          an empty string was set.
        * Removed the shorttags in control.php and dasm.php to fix bug #8.
        * Set the svn keywords property to some files.
        * Moved some function defs from eaccelerator.h to the right files.

2006-03-06  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Removed the old webui and made a new controlpanel en disassembler.
        * Added php api documentation

2006-03-02  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Changed copyright dates to 2006
        * Updated the eaccelerator url in some last files
        * I removed all authors from specific files. Authors can be traced 
          through mmcache and eaccelerator cvs. I did this because some 
          names should be added to quite some source files while others have