@@ -1,3 +1,9 @@
+2006-03-28  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Removed the constant that were registered in the debug code. They 
+          could only be used in php code and not in the config file. This 
+          handles bug #29
+
 2006-03-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Source code is now shown in dasm.php
